tests/NormalTests/paczka1/fuzzy1/66523271.err
Error in line 15: le815TxKcin S150 9,7
Error in line 6: 4dpGaxT S943 90,9
Error in line 13: L8t3E S150 62,9
Error in line 17: 4dpGaxT A238 57,3
Error in line 16: le815TxKcin A287 47,6
Error in line 30: L8t3E A287 38,6
Error in line 34: L8t3E S150 20,4
Error in line 38: le815TxKcin A238 46,15
Error in line 14: HRkcSOn8af S943 171,7
